fix: Adjust scrollbar track styles for improved appearance

--- a/Revisao/style.css
+++ b/Revisao/style.css
@@ -627,8 +627,6 @@ body::-webkit-scrollbar-track {
     position: absolute;
     top: 5px;
     right: 5px;
-    width: 10px;
-    height: 15px;
     background-color: red;
     border-radius: 50%;
     z-index: 10;
@@ -636,6 +634,7 @@ body::-webkit-scrollbar-track {
     font-size: 10px;
     text-align: center;
     color: white;
+    padding: 2px;
 }
 
 
